# ChangeLog for app-arch/tar
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-arch/tar/ChangeLog,v 1.81 2006/12/08 18:40:54 dang Exp $

  08 Dec 2006; Daniel Gryniewicz <dang@gentoo.org> tar-1.16-r2.ebuild:
  Marked stable on amd64 for bug #155901

  06 Dec 2006; Alexander H. Færøy <eroyf@gentoo.org> tar-1.16-r2.ebuild:
  Stable on Alpha; bug #155901

  06 Dec 2006; Alexander H. Færøy <eroyf@gentoo.org> tar-1.16-r2.ebuild:
  Stable on MIPS; bug #155901

  06 Dec 2006; Markus Rothe <corsair@gentoo.org> tar-1.16-r2.ebuild:
  Stable on ppc64; bug #155901

  03 Dec 2006; Tim Yamin <plasmaroo@gentoo.org> tar-1.16-r2.ebuild:
  Stable on IA64; bug #155901.

  03 Dec 2006; Jeroen Roovers <jer@gentoo.org> tar-1.16-r2.ebuild:
  Stable for HPPA (bug #155901).

  03 Dec 2006; Jason Wever <weeve@gentoo.org> tar-1.16-r2.ebuild:
  Stable on SPARC wrt security bug #155901

  03 Dec 2006; Tobias Scherbaum <dertobi123@gentoo.org> tar-1.16-r2.ebuild:
  ppc stable, bug #155901

  03 Dec 2006; Andrej Kacian <ticho@gentoo.org> tar-1.16-r2.ebuild:
  Stable on x86, bug #155901.

*tar-1.16-r2 (02 Dec 2006)

  02 Dec 2006; Mike Frysinger <vapier@gentoo.org>
  +files/tar-1.16-remove-GNUTYPE_NAMES.patch, +tar-1.16-r2.ebuild:
  Grab change from upstream to remove GNUTYPE_NAMES #155901.

*tar-1.16-r1 (01 Nov 2006)

  01 Nov 2006; Mike Frysinger <vapier@gentoo.org>
  +files/tar-1.16-segv.patch, +tar-1.16-r1.ebuild:
  Add fix from upstream.

*tar-1.16 (21 Oct 2006)

  21 Oct 2006; Mike Frysinger <vapier@gentoo.org> +tar-1.16.ebuild:
  Version bump.

  15 Oct 2006; Timothy Redaelli <drizzt@gentoo.org> tar-1.15.92-r1.ebuild:
  Added ~x86-fbsd keyword

*tar-1.15.92-r1 (14 Oct 2006)

  14 Oct 2006; Sven Wegener <swegener@gentoo.org>
  +files/tar-1.15.92-stderr.patch, +tar-1.15.92-r1.ebuild:
  Fix from upstream for stdout/verbose bug #151239.

*tar-1.15.92 (13 Oct 2006)

  13 Oct 2006; Mike Frysinger <vapier@gentoo.org> +tar-1.15.92.ebuild: