@@ -1,0 +1,3 @@
+MD5 d51593461c5ef1f7e37134f22338bb9e tar-1.16.1.tar.bz2 1793624
+RMD160 27134a0c5512f37a8e063843ba6175a39e2da21b tar-1.16.1.tar.bz2 1793624
+SHA256 5c843004934142cc85decf4ae0f5f8b8b568834d3e23f1568193b3836422d2bb tar-1.16.1.tar.bz2 1793624
