@@ -1,6 +1,16 @@
 # ChangeLog for app-arch/tar
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-arch/tar/ChangeLog,v 1.81 2006/12/08 18:40:54 dang Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-arch/tar/ChangeLog,v 1.83 2006/12/30 01:12:48 vapier Exp $
+
+  30 Dec 2006; Mike Frysinger <vapier@gentoo.org> +files/rmt,
+  tar-1.16.1.ebuild:
+  Take a page from Debian and make /etc/rmt a shell script so people know why
+  this cruft exists #159429 by Rafal Rzepecki.
+
+*tar-1.16.1 (10 Dec 2006)
+
+  10 Dec 2006; Mike Frysinger <vapier@gentoo.org> +tar-1.16.1.ebuild:
+  Version bump.
 
   08 Dec 2006; Daniel Gryniewicz <dang@gentoo.org> tar-1.16-r2.ebuild:
   Marked stable on amd64 for bug #155901
